# flan-t5-finetune-ita

./: .gitignore  README.md  main.py  pyproject.toml
dataset/ita_dataset/1/: ita_dataset.json
jupyter/: checkpoint_download.py  convert_to_onnx.ipynb  flan_t5_finetuning_for_anonymization.ipynb  localenv  parameters.yaml  test_finetuned_model.ipynb  tokenizer_and_data_prep.ipynb
jupyter/libs/: __init__.py  dataset.py  parameters.py  utility.py
kubeflow/: convert_model.py  download_from_s3.py  fetch_model.py  finetune-pipeline.yaml  main_pipeline.py  persistent_data.py  train_model.py  upload_model.py
