[project]
name = "flan-t5-finetuning"
version = "0.1.0"
description = "Example Machinery to Finetune a FLAN-T5 model to recognize and anonymize PII in Italian Documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.20.0",
    "datasets>=2.12.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.0",
    "huggingface-hub>=0.35.3",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "protobuf>=3.20.0",
    "sentencepiece>=0.1.99",
    "seqeval>=1.2.2",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "transformers>=4.30.0",
]
